<resources>
    <string name="title">Title</string>
    <string name="x">x</string>
    <string name="hello_world">Hello World</string>
    <string name="app_name">My City Info</string>
    <string name="birgunj">Birgunj</string>
    <string name="my_city_information">My City Information</string>
    <string name="choose_your_city">Choose your City</string>
    <string name="dharmanagar">Dharmanagar</string>
    <string name="kathmandu">Kathmandu</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register2">New User? Register here</string>
    <string name="registered">Already Registered? Login here</string>
    <string name="loc">Show location on Google map</string>
    <string name="dir">Get Directions</string>
    <string name="info">Show information</string>
    <string name="address">Address</string>
    <string name="featrue">Featrue</string>
    <string name="locality">Locality</string>
    <string name="countryname">CountryName</string>
    <string name="postalcode">PostalCode</string>
    <string name="adminarea">AdminArea</string>
    <string-array name="header_titles">
        <item>Hotels</item>
        <item>Traveling</item>
        <item>Restaurants</item>
        <item>Shopping</item>
        <item>Banks</item>
        <item>Health</item>
        <item>Education</item>
        <item>Temples</item>
    </string-array>
    <string-array name="bir_hot">
        <item>Hotel Makalu</item>
        <item>Hotel Vishuwa</item>
        <item>Hotel Kailash</item>
        <item>Hotel Suraj</item>
        <item>Hotel Country INN</item>
    </string-array>
    <string-array name="bir_tra">
        <item>Ghantaghar Bus Stop</item>
        <item>Kalaiya Bus Stop</item>
    </string-array>
    <string-array name="bir_res">
        <item>Anmol Restaurant</item>
        <item>Himachal Cabin</item>
        <item>MagicBells Restaurant</item>
        <item>The Dugout</item>
        <item>The Old Darbar</item>
    </string-array>
    <string-array name="bir_sho">
        <item>Lifestyle</item>
        <item>V Mart</item>
        <item>Manyavar</item>
    </string-array>
    <string-array name="bir_ban">
        <item>Everest Bank Limited</item>
        <item>Nepal Rashtra Bank</item>
        <item>Sanima Bank</item>
        <item>Siddhartha Bank</item>
    </string-array>
    <string-array name="bir_hea">
        <item>Birgunj Healthcare Hospital</item>
        <item>Narayani Hospital</item>
        <item>District Health Office</item>
    </string-array>
    <string-array name="bir_edu">
        <item>Kadambari Academy</item>
        <item>Delhi Public School</item>
        <item>Gurukul Academy</item>
        <item>St Xavier School</item>
        <item>Gautam Secondary School</item>
    </string-array>
    <string-array name="bir_tem">
        <item>Maisthan Birgunj</item>
        <item>Prasauni Hanuman Mandir</item>
    </string-array>
    <string-array name="dmr_hot">
        <item>Panchabati Hotel</item>
        <item>Hotel JC Plaza</item>
        <item>Hotel Raatdin</item>
        <item>Kiran Guest House</item>
    </string-array>
    <string-array name="dmr_tra">
        <item>ISBT Dharmanagar</item>
        <item>Dharmanagar Railway St</item>
        <item>Old Bus Stand</item>
    </string-array>
    <string-array name="dmr_res">
        <item>Bandhab Restaurant</item>
        <item>Restaurant JC Plaza</item>
    </string-array>
    <string-array name="dmr_sho">
        <item>CityLife Dharmanagar</item>
        <item>Rana Plaza</item>
        <item>Vishal Mega Mart</item>
    </string-array>
    <string-array name="dmr_ban">
        <item>State Bank of India</item>
        <item>Bank of India</item>
        <item>Punjab National Bank</item>
    </string-array>
    <string-array name="dmr_hea">
        <item>NTD Hospital</item>
        <item>PCCM Eye Hospital</item>
        <item>Sanicherra PHC</item>
    </string-array>
    <string-array name="dmr_edu">
        <item>DNV School</item>
        <item>BBI School</item>
        <item>Holy Cross School</item>
    </string-array>
    <string-array name="dmr_tem">
        <item>Town Kali Bari</item>
        <item>Hari Mandir</item>
        <item>Gorakhnath Temple</item>
        <item>Notunpatti Shani Mandir</item>
    </string-array>
    <string-array name="ktm_hot">
        <item>Avataar Hotel</item>
        <item>Grand Hotel Kathmandu</item>
        <item>Hotel Himalaya</item>
        <item>Hotel Shangri La</item>
        <item>Apsara Boutique Hotel</item>
        <item>Arya Tara Hotel</item>
    </string-array>
    <string-array name="ktm_tra">
        <item>Gongabu Bus Station</item>
        <item>Ratna Park Bus Stop</item>
    </string-array>
    <string-array name="ktm_res">
        <item>Blueberry Kitchen</item>
        <item>Frens Kitchen</item>
        <item>Fusion Himalaya Restaurant</item>
        <item>Grill Oregano Restaurant</item>
        <item>Melrose Restaurant</item>
    </string-array>
    <string-array name="ktm_sho">
        <item>Big Mart</item>
        <item>Civil Mall</item>
        <item>Adidas</item>
        <item>Rising Mall</item>
        <item>Miniso Nepal</item>
        <item>Lalitpur Mall</item>
    </string-array>
    <string-array name="ktm_ban">
        <item>Nepal Investment Bank</item>
        <item>Kumari Bank LTD</item>
        <item>Sanima Bank LTD</item>
        <item>Siddhartha Bank LTD</item>
        <item>Sunrise Bank</item>
    </string-array>
    <string-array name="ktm_hea">
        <item>Norvic International Hospital</item>
        <item>Kathmandu Hospital</item>
        <item>Kanti Childrens Hospital</item>
        <item>Grand International Hospital</item>
        <item>B and B Hospital</item>
    </string-array>
    <string-array name="ktm_edu">
        <item>Galaxy Public School</item>
        <item>Lincoln School</item>
        <item>Little Angles</item>
        <item>Rato Bangla School</item>
    </string-array>
    <string-array name="ktm_tem">
        <item>Pashupatinath Temple</item>
        <item>Swayambhunath Temple</item>
        <item>Guhyeshwori Temple</item>
        <item>Bouddhanath Temple</item>
    </string-array>
    <string name="hotelmakalu">https://www.google.com/maps/place/Hotel+Makalu/@27.0085267,84.8721394,17z/data=!3m1!4b1!4m5!3m4!1s0x399355daaa88cdb7:0x570bd81e07cd8cff!8m2!3d27.0085219!4d84.8743281</string>
    <string name="hotelvishuwa">https://www.google.com/maps/place/Hotel+Vishuwa/@27.0154005,84.8871278,18z/data=!4m8!1m2!2m1!1shotels!3m4!1s0x3993545cb56ba0bb:0xb22c68aa24a217b0!8m2!3d27.0154005!4d84.8882221</string>
    <string name="hotelkailash">https://www.google.com/maps/place/Hotel+Kailash/@27.0108159,84.8662949,15z/data=!4m8!1m2!2m1!1shotels!3m4!1s0x3993543e3d35a3eb:0x7f4cf210873b3426!8m2!3d27.0108159!4d84.8739318</string>
    <string name="hotelsuraj">https://www.google.com/maps/place/Hotel+Suraj/@27.009879,84.8700706,16z/data=!4m8!1m2!2m1!1shotels!3m4!1s0x3993543fd6fa4bf3:0xf9860a0222c61318!8m2!3d27.009879!4d84.874448</string>
    <string name="hotelcountryinn">https://www.google.com/maps/place/Hotel+Country+INN/@27.0090727,84.8686518,16z/data=!4m8!1m2!2m1!1shotels!3m4!1s0x39935415e54280f3:0x3dec67cecb8455f0!8m2!3d27.0090727!4d84.8730292</string>
    <string name="ghantagharbusstop">https://www.google.com/maps/place/Ghantaghar+Bus+Stop/@27.0091193,84.8555196,14z/data=!4m8!1m2!2m1!1sbus!3m4!1s0x39935440cd30567b:0xefd350196003ce46!8m2!3d27.0159649!4d84.8794806</string>
    <string name="kalaiyabusstop">https://www.google.com/maps/place/Kalaiya+Bus+Stop/@27.0319258,84.9978438,17z/data=!3m1!4b1!4m5!3m4!1s0x39ecabb67fc80f07:0xe2db901bc8cdc524!8m2!3d27.031921!4d85.0000325</string>
    <string name="anmolrestaurant">https://www.google.com/maps/place/Anmol+Restaurant/@27.0115197,84.8744531,17z/data=!4m8!1m2!2m1!1srestaurant!3m4!1s0x3993543f949ee703:0x94f53003cb3b53a9!8m2!3d27.0115197!4d84.8766418</string>
    <string name="himachalcabin">https://www.google.com/maps/place/Himanchal+Cabin/@27.0132917,84.8754304,17z/data=!4m8!1m2!2m1!1srestaurant!3m4!1s0x3993543f7e16e30d:0xc12f8ed80aebf6c!8m2!3d27.0132917!4d84.8776191</string>
    <string name="magicbellsrestaurant">https://www.google.com/maps/place/Magic+Bells/@27.013197,84.8729359,17z/data=!4m8!1m2!2m1!1srestaurant!3m4!1s0x3993543f0194f9a5:0x136bd02ae8c7f730!8m2!3d27.013197!4d84.8751246</string>
    <string name="thedugout">https://www.google.com/maps/place/The+Dugout/@27.0110036,84.871202,17z/data=!4m8!1m2!2m1!1srestaurant!3m4!1s0x399355c9a02ab861:0x616cd7563da8e442!8m2!3d27.0110036!4d84.8733907</string>
    <string name="theolddarbar">https://www.google.com/maps/place/The+Old+Durbar+Family+Restaurant/@27.0141653,84.868513,17z/data=!4m8!1m2!2m1!1srestaurant!3m4!1s0x3993543c426dee8d:0x5a64bc13832af583!8m2!3d27.0141653!4d84.8707017</string>
    <string name="lifestyle">https://www.google.com/maps/place/Lifestyle/@27.0102983,84.8732914,17z/data=!4m8!1m2!2m1!1sshopping!3m4!1s0x3993543fd6c05427:0xb487526ee772eb62!8m2!3d27.0102983!4d84.8754801</string>
    <string name="vmart">https://www.google.com/maps/place/V-Mart/@26.9775148,84.8471313,17z/data=!3m1!4b1!4m5!3m4!1s0x399351510382e745:0x3d6516186385f294!8m2!3d26.97751!4d84.84932</string>
    <string name="manyavar">https://www.google.com/maps/place/Manyavar/@26.5465925,84.0285334,9z/data=!4m8!1m2!2m1!1smanyavar!3m4!1s0x399351543f003599:0x55e38f202e6d39e5!8m2!3d26.9825499!4d84.8521763</string>
    <string name="everestbanklimited">https://www.google.com/maps/place/Everest+Bank+Limited/@27.04134,84.8678468,14z/data=!4m8!1m2!2m1!1sbanks!3m4!1s0x3993568374f252e1:0xf3e5d5d946f50dbe!8m2!3d27.0235714!4d84.8527517</string>
    <string name="nepalrashtrabank">https://www.google.com/maps/place/Nepal+Rastra+Bank,+Birgunj/@27.0122462,84.8686736,17z/data=!3m1!4b1!4m5!3m4!1s0x3993543cc06f551f:0x7ef60955b5446c94!8m2!3d27.0122414!4d84.8708623</string>
    <string name="sanimabank">https://www.google.com/maps/place/Sanima+Bank+Ltd./@27.0139741,84.8785891,17z/data=!4m8!1m2!2m1!1sbanks!3m4!1s0x399354411c2fba1b:0xa637a82e9ab2a2a8!8m2!3d27.0139741!4d84.8807778</string>
    <string name="siddharthabank">https://www.google.com/maps/place/Siddhartha+Bank/@27.0099961,84.8755561,17z/data=!4m8!1m2!2m1!1sbanks!3m4!1s0x3993543fd6753bfb:0xc9f5e0d7c67df919!8m2!3d27.0100487!4d84.8754585</string>
    <string name="birgunjhealthcarehospital">https://www.google.com/maps/place/Birganj+Health+Care+Hospital/@27.044267,84.8967364,17z/data=!3m1!4b1!4m5!3m4!1s0x399355078e77619f:0xcc55b71d1c6fecbe!8m2!3d27.0442622!4d84.8989251</string>
    <string name="narayanihospital">https://www.google.com/maps/place/Narayani+Sub-Regional+Hospital+(Prasuti+Griha)/@27.0040278,84.8538634,14z/data=!4m8!1m2!2m1!1snarayani+hospital!3m4!1s0x399354114d46f979:0x43f04a2a9e445f81!8m2!3d27.0039085!4d84.8716735</string>
    <string name="districthealthoffice">https://www.google.com/maps/place/District+Public+Health+Office/@27.0368892,84.8916364,17z/data=!3m1!4b1!4m5!3m4!1s0x399355ab771da2b7:0x93b800419c9a0b14!8m2!3d27.0368844!4d84.8938251</string>
    <string name="kadambariacademy">https://www.google.com/maps/place/Kadambari+Academy/@27.0369128,84.8850703,15z/data=!4m8!1m2!2m1!1sschools!3m4!1s0x3993544e90000001:0xb256e4f3d1c7d1fc!8m2!3d27.0271987!4d84.8848032</string>
    <string name="delhipublicschool">https://www.google.com/maps/place/Delhi+Public+School/@27.0527294,84.8973725,15z/data=!4m8!1m2!2m1!1sschools!3m4!1s0x3993550c2bd3d8f3:0xdf38393213bf351!8m2!3d27.0527294!4d84.9061272</string>
    <string name="log_out">Logout</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>