<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="#80bcf5a9">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/title"
        android:fontFamily="@font/biorhyme"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.25"/>

    <TextView
        android:id="@+id/Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#88bcf5a9"
        android:fontFamily="@font/biorhyme_bold"
        android:gravity="center"
        android:text="@string/address"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/featurename"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/featrue"
        android:fontFamily="@font/biorhyme"
        android:textColor="#808080"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.4"/>

    <TextView
        android:id="@+id/locality"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/locality"
        android:fontFamily="@font/biorhyme"
        android:textColor="#808080"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"/>

    <TextView
        android:id="@+id/adminarea"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/adminarea"
        android:fontFamily="@font/biorhyme"
        android:textColor="#808080"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.6"/>

    <TextView
        android:id="@+id/countryname"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/countryname"
        android:fontFamily="@font/biorhyme"
        android:textColor="#808080"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.7"/>

    <TextView
        android:id="@+id/postalcode"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/postalcode"
        android:fontFamily="@font/biorhyme"
        android:textColor="#808080"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.8"/>

    <TextView
        android:id="@+id/closebutton"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/x"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />
</android.support.constraint.ConstraintLayout>