<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="170dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/biorhyme_bold"
        android:gravity="center"
        android:text="@string/log_out"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/qs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="#000000"
        android:fontFamily="@font/biorhyme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/textView6" />

    <TextView
        android:id="@+id/yes"
        android:background="@drawable/log_back_yes"
        android:layout_width="80dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/yes"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:fontFamily="@font/biorhyme_bold"
        app:layout_constraintTop_toBottomOf="@id/qs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:layout_marginStart="150dp"/>

    <TextView
        android:id="@+id/no"
        android:background="@drawable/log_back_no"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:fontFamily="@font/biorhyme_bold"
        app:layout_constraintTop_toBottomOf="@id/qs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:layout_marginEnd="150dp"/>

</android.support.constraint.ConstraintLayout>